# d4dj.cz

backend/: .gitignore  bun.lockb  package.json  script.sql
backend/src/: index.ts  routes.ts  types.ts
frontend/: Cargo.toml  Trunk.toml  bun.lockb  package.json
frontend/src/: App.svelte  app.css  app.tsx  lib.rs  main.rs  main.ts  main.tsx  router.rs
frontend/src/components/: footer.rs  header.rs  mod.rs
frontend/src/components/input/: text_input.rs
frontend/src/components/login/: login_form.rs  mod.rs  register_form.rs
frontend/src/components/post/: mod.rs  post_form.rs
frontend/src/css/: styles.css  styles.css.map  styles.scss
frontend/src/lib/: Counter.svelte  Posts.svelte  store.ts
frontend/src/pages/: home.rs  mod.rs  post.rs
frontend/src/pages/login/: login.rs
frontend/src/routes/: +layout.svelte  +page.svelte  store.ts
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/post/: +page.server.ts  +page.svelte
