[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"
web-sys = { version = "0.3.64", features = ["HtmlInputElement"] }
wasm-bindgen = "0.2.87"
gloo = "0.10"
gloo-storage = "0.3"
